style: about section and fix nav z-index and border-radius of progress

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ nav ul {
     width: 90%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    z-index: 2;
 }
 
 nav ul li {
@@ -92,7 +93,7 @@ main>section {
     width: 4.2em;
     position: absolute;
     left: 50%;
-    top: -2.5em;
+    top: -2.2em;
     transform: translateX(-50%);
 }
 
@@ -142,14 +143,82 @@ main>section {
 .stats-section progress {
     width: 100%;
     appearance: none;
+    border-radius: 9999px;
+    overflow: hidden;
     background-color: var(--Green-700);
 }
 
 .stats-section progress[value]::-webkit-progress-bar {
-  background-color: #eee;
+    background-color: #eee;
 }
 
 .stats-section progress::-webkit-progress-value {
     background-color: var(--Green-400);
     border-radius: 10px;
+}
+
+.about-section h2 {
+    font-size: 1.3em;
+}
+
+.about-section>p {
+    margin-top: 1em;
+    color: var(--Gray-500);
+    font-weight: 500;
+    line-height: 1.4em;
+}
+
+.reward-container {
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.reward-container article {
+    border: 1px solid var(--Gray-500);
+    padding: 1.2em;
+    font-size: 1em;
+    border-radius: 10px;
+
+    &.out-of-stock {
+        opacity: .5;
+    }
+}
+
+.reward-container article h3 {
+    font-size: 1em;
+}
+
+.reward-container article .pledge {
+    color: var(--Green-700);
+    margin-top: .4em;
+}
+
+.reward-container article .info {
+    margin-top: 1em;
+    line-height: 1.4em;
+    color: var(--Gray-500);
+    font-weight: 500;
+}
+
+.reward-container article .left {
+    margin-top: 1em;
+    font-size: 2em;
+    font-weight: 700;
+    color: var(--Black);
+}
+
+.reward-container article .left span {
+    font-size: .6em;
+    color: var(--Gray-500);
+    font-weight: 500;
+}
+
+.reward-container article .select-btn {
+    margin-top: 2em;
+
+    &.out-of-stock {
+        background-color: var(--Gray-500);
+    }
 }
